Make the stylesheet path absolute

--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -11,13 +11,13 @@ block content
           li.nav-item
             a.nav-link(href="/") Home
           li.nav-item
-            a.nav-link(href="read_more") Read more
+            a.nav-link(href="/read_more") Read more
           li.nav-item
-            a.nav-link(href="features") Features
+            a.nav-link(href="/features") Features
           li.nav-item
-            a.nav-link(href="tutorial") Tutorials
+            a.nav-link(href="/tutorial") Tutorials
           li.nav-item
-            a.nav-link(href="contact") Contact
+            a.nav-link(href="/contact") Contact
 
   block main_content
 
