--- a/views/layout_main.pug
+++ b/views/layout_main.pug
@@ -6,8 +6,8 @@ html
     title Qoonet: Take control
     link(rel="shortcut icon", href="/images/QooNet.ico")
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css')
-    link(rel='stylesheet', href='stylesheets/contacts.css')
-    link(rel='stylesheet', href='stylesheets/carousel.css')
+    link(rel='stylesheet', href='/stylesheets/contacts.css')
+    link(rel='stylesheet', href='/stylesheets/carousel.css')
     script(defer, src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous")
 
   body
