QooNet. Not Qoonet. :/

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -10,7 +10,7 @@ block main_content
         h3.text-center.text-uppercase contact us
         p.text-center.w-75.m-auto.
           We are an organisation whose primary tasks are maintenance and development 
-          of the Qoonet control architecture. Please use the following to get in 
+          of the QooNet control architecture. Please use the following to get in 
           touch.
 
         div.row.justify-content-center
