--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -3,7 +3,7 @@ extends layout_main
 block content
   header
     nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
-      a.navbar-brand(href="/") Qoonet
+      a.navbar-brand(href="/") QooNet
       button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon
       div.collapse.navbar-collapse(id="navbarCollapse")
