--- a/views/includes/mixin_jumbotron.pug
+++ b/views/includes/mixin_jumbotron.pug
@@ -2,7 +2,7 @@ mixin add_jumbotron(title)
   div.jumbotron.jumbotron-fluid
     div.container
       if title
-        h1.display-4= 'Qoonet: ' +title
+        h1.display-4= 'QooNet: ' +title
       else
-        h1.display-4 Qoonet
+        h1.display-4 QooNet
       p.lead An Open Source IoT Control System
