--- a/views/includes/tutorial/nodered_controller.pug
+++ b/views/includes/tutorial/nodered_controller.pug
@@ -1,7 +1,7 @@
 +make_card(
   'Device control',
   'QooNet controller on BeagleBone Black',
-  'Building the Qoonet device controller. This is the first tutorial to use NodeRed.',
+  'Building the QooNet device controller. This is the first tutorial to use NodeRed.',
   'images/node-red-hexagon.png',
   '#'
   )
