--- a/views/includes/tutorial/nodered_webapp.pug
+++ b/views/includes/tutorial/nodered_webapp.pug
@@ -1,7 +1,7 @@
 +make_card(
   'A web application',
   'NodeRed Web App',
-  'In this tutorial, we walk through the steps needed to build a web application for control of a Qoonet system.',
+  'In this tutorial, we walk through the steps needed to build a web application for control of a QooNet system.',
   'images/ImportedWebAppFlow.png',
   '#'
   )
