--- a/views/includes/tutorial/test_device.pug
+++ b/views/includes/tutorial/test_device.pug
@@ -1,7 +1,7 @@
 +make_card(
   'A test device',
   'Test Device',
-  'QooNet is for controlling hardware, so here we build a small test device to allow us to experiment with Qoonet\'s capabilities.',
+  'QooNet is for controlling hardware, so here we build a small test device to allow us to experiment with QooNet\'s capabilities.',
   'images/demoBreadBoard.png',
   '#'
   )
