--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,6 @@ block main_content
     p.lead.
       QooNet takes it out of the hands of the experts.
     p.lead.
-      Qoonet gives controls back to you.
+      QooNet gives controls back to you.
     p.lead
       a.btn.btn-lg.btn-secondary(href="read_more") Read more
