--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -26,7 +26,7 @@ block main_content
           h2.featurette-heading Standing on the shoulders of giants
           p.lead.
             Business models that depend on constant vendor interaction lead to systems 
-            of poor quality. Qoonet is 100% open source. The code is yours 
+            of poor quality. QooNet is 100% open source. The code is yours 
             to modify and optimise to your needs, and is accessible enough to 
             make this a reality.
         div.col-md-5
@@ -40,7 +40,7 @@ block main_content
           p.lead.
             With mobile control an expectation of modern systems, real-time connections 
             are vital to maintaining the quality of the data for all users. While 
-            such communciations could overburden traditional control systems, the Qoonet 
+            such communciations could overburden traditional control systems, the QooNet 
             architecture is immune from this.
         div.col-md-5
           img.featurette-image.img-fluid.mx-auto(src="images/PowerMeterHerokuDashboard.png", alt="Generic placeholder image")
