--- a/views/read_more.pug
+++ b/views/read_more.pug
@@ -40,7 +40,7 @@ block main_content
           p.lead.
             With mobile control an expectation of modern systems, real-time connections 
             are vital to maintaining the quality of the data for all users. While 
-            such communciations could overburden traditional control systems, the QooNet 
+            such communications could overburden traditional control systems, the QooNet 
             architecture is immune from this.
         div.col-md-5
           img.featurette-image.img-fluid.mx-auto(src="images/PowerMeterHerokuDashboard.png", alt="Generic placeholder image")
