Changed personal link

--- a/views/header_footer_front.pug
+++ b/views/header_footer_front.pug
@@ -17,4 +17,4 @@ block content
     footer.mastfoot.mt-auto
       div.inner
         p Design by 
-          a(href='https://twitter.com/sdmolloy') @sdmolloy
+          a(href='https://github.com/stevemolloy/') stevemolloy
