--- a/views/header_footer_main.pug
+++ b/views/header_footer_main.pug
@@ -23,4 +23,4 @@ block content
 
   footer.container
     p.float-right Design by 
-      a(href='https://twitter.com/sdmolloy') @sdmolloy
+      a(href='https://github.com/stevemolloy/') stevemolloy
