--- a/views/includes/mixin_jumbotron.pug
+++ b/views/includes/mixin_jumbotron.pug
@@ -5,4 +5,4 @@ mixin add_jumbotron(title)
         h1.display-4= 'QooNet: ' +title
       else
         h1.display-4 QooNet
-      p.lead An Open Source IoT Control System
+      p.lead Instrumentation for humans
