Started the RPi instructions to overwrite the BBB ones

--- a/views/includes/tutorial/raspberrypi_prep.pug
+++ b/views/includes/tutorial/raspberrypi_prep.pug
@@ -3,5 +3,5 @@
   'Prep a BeagleBone Black for QooNet',
   'A freshly unboxed BeagleBone Black takes a little bit of work to make it ready for use. In this tutorial we walk you through the steps you need to take.',
   'images/beagleboneblack.jpg',
-  '/tutorial/setup_BBB'
+  '/tutorial/setup_rpi'
   )
