--- a/views/includes/tutorial/raspberrypi_prep.pug
+++ b/views/includes/tutorial/raspberrypi_prep.pug
@@ -1,7 +1,7 @@
 +make_card(
   'Setting up',
-  'Prep a BeagleBone Black for QooNet',
-  'A freshly unboxed BeagleBone Black takes a little bit of work to make it ready for use. In this tutorial we walk you through the steps you need to take.',
-  'images/beagleboneblack.jpg',
+  'Prep a Raspberry Pi for QooNet',
+  'A freshly unboxed Raspberry Pi takes a little bit of work to make it ready for use. In this tutorial we walk you through the steps you need to take.',
+  'images/RPi-Logo-SCREEN.png',
   '/tutorial/setup_rpi'
   )
